# VINS-Mono-Optimization

./: .gitignore  CHANGES.md  Q&A.md  README.md
benchmark_publisher/launch/: publish.launch
config/: vins_rviz_config.rviz
config/euroc/: euroc_config.yaml
config/my_config/: my_config.yaml
feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  parameters.cpp
line_feature_tracker/: CMakeLists.txt  package.xml
line_feature_tracker/config/config/: config.yaml  config_euroc.yaml  config_fast.yaml  config_kitti.yaml  config_reduced.yaml
line_feature_tracker/src/: auxiliar.cpp  auxiliar.h  config.cpp  feature_tracker.cpp  feature_tracker.h  feature_traker_node.cpp  parameters.cpp
line_feature_tracker/src/line_feature/: config.cpp  config.h  gridStructure.cpp  gridStructure.h  lineIterator.cpp  lineIterator.h  line_feature.cpp  line_feature.h  matching.cpp  matching.h
line_vins_estimator/: CMakeLists.txt  package.xml
line_vins_estimator/launch/: euroc_line.launch  vins_pro.launch  vins_rviz.launch
line_vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  line_feature_manager.cpp  line_feature_manager.h  parameters.cpp  parameters.h
line_vins_estimator/src/factor/: integration_base.h  line_local_parameterization.cpp  line_local_parameterization.h  line_projection_factor.cpp  line_projection_factor.h  marginalization_factor.cpp
line_vins_estimator/src/initial/: initial_aligment.cpp
line_vins_estimator/src/utility/: utility.cpp  utility.h  visualization.cpp  visualization.h
new_feature_tracker/: CMakeLists.txt  package.xml
new_feature_tracker/src/: edge_points_extractor.cpp  edge_points_extractor.h  new_feature_tracker.cpp  new_feature_tracker.h  new_feature_tracker_node.cpp  parameters.cpp  parameters.h
new_feature_tracker/src/edge_finder/: CMakeLists.txt  edge_finder.cpp  edge_finder.h  iigauss.cpp  iimage.cpp  sspace.cpp  sspace.h
new_feature_tracker/src/edge_finder/UtilLib/: cam_model.h  timer.h  toon_util.h  util.h
new_feature_tracker/src/edge_finder/VideoLib/: image.h  video_io.cpp
pose_graph/src/: keyframe.cpp  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
vins_estimator/launch/: test_feature_tracking.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  projection_factor.cpp
vins_estimator/src/initial/: initial_sfm.cpp
